app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_native-lib_armeabi-v7a.stdout.txt
ninja: Entering directory `/home/sam/AndroidOpenCVCamera/app/.cxx/cmake/debug/armeabi-v7a'
[1/2] Building CXX object CMakeFiles/native-lib.dir/src/main/cpp/native-lib.cpp.o
FAILED: CMakeFiles/native-lib.dir/src/main/cpp/native-lib.cpp.o 
/home/sam/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=armv7-none-linux-androideabi23 --gcc-toolchain=/home/sam/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/sam/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dnative_lib_EXPORTS -I/home/sam/Downloads/OpenCV-android-sdk/sdk/native/jni/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -lGLESv2 -std=gnu++11 -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/src/main/cpp/native-lib.cpp.o -MF CMakeFiles/native-lib.dir/src/main/cpp/native-lib.cpp.o.d -o CMakeFiles/native-lib.dir/src/main/cpp/native-lib.cpp.o -c ../../../../src/main/cpp/native-lib.cpp
clang++: warning: -lGLESv2: 'linker' input unused [-Wunused-command-line-argument]
../../../../src/main/cpp/native-lib.cpp:70:46: error: member reference base type 'size_t' (aka 'unsigned int') is not a structure or union
        LOGD("openCL created", ctx.ndevices().c_str());
                               ~~~~~~~~~~~~~~^~~~~~
../../../../src/main/cpp/common.hpp:3:74: note: expanded from macro 'LOGD'
#define LOGD(...) ((void)__android_log_print(ANDROID_LOG_DEBUG, LOG_TAG, __VA_ARGS__))
                                                                         ^~~~~~~~~~~
../../../../src/main/cpp/native-lib.cpp:72:20: warning: data argument not used by format string [-Wformat-extra-args]
    LOGD("openCL", (ctx.create() ? "true":"false"));
         ~~~~~~~~  ^
../../../../src/main/cpp/common.hpp:3:74: note: expanded from macro 'LOGD'
#define LOGD(...) ((void)__android_log_print(ANDROID_LOG_DEBUG, LOG_TAG, __VA_ARGS__))
                                                                         ^~~~~~~~~~~
1 warning and 1 error generated.
ninja: build stopped: subcommand failed.
